updated facet filters

--- a/findly-builder/src/app/components/result-templates/result-templates.component.html
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.html
@@ -185,6 +185,31 @@
             <input type="checkbox" checked>
             <div class="slider"><span class="enabled">Enabled</span><span class="disabled">Disabled</span></div>
           </label>
+          <ng-container>
+              <div class="filter-facets-info-images mt-3">
+                <div class="group-radiobutton mb-3">
+                  <div class="kr-sg-radiobutton">
+                    <input id="radio-1" name="radio" class="radio-custom" type="radio">
+                    <label for="radio-1" class="radio-custom-label">Left Aligned </label>
+                  </div>
+                  <div class="kr-sg-radiobutton">
+                    <input id="radio-1" name="radio" class="radio-custom" type="radio">
+                    <label for="radio-1" class="radio-custom-label">Right Aligned </label>
+                  </div>
+                  <div class="kr-sg-radiobutton">
+                    <input id="radio-1" name="radio" class="radio-custom" type="radio">
+                    <label for="radio-1" class="radio-custom-label">Top Aligned </label>
+                  </div>
+                </div>
+                <div class="img-info">
+                  <img src="assets/icons/resultTemplate/top-aligned.png">
+                  <img src="assets/icons/resultTemplate/lef-aligned.png">
+                  <img src="assets/icons/resultTemplate/right-aligned.png">
+                  <img src="assets/icons/resultTemplate/top-down-left-aligned.png">
+                  <img src="assets/icons/resultTemplate/top-down-top-aligned.png">
+                </div>
+              </div>
+          </ng-container>
         </div>
       </div>
   </perfect-scrollbar>
