--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -11975,11 +11975,11 @@ padding-right: 0;
 .searchAssist-kore-chat-window .tile-description  {
     height: 16px;
 }
-/* .searchAssist-kore-chat-window .tile-description.twolines-tile-description {
+.searchAssist-kore-chat-window .tile-description.twolines-tile-description {
     min-height: 16px !important;
     max-height: 32px !important;
     height: auto;
-} */
+}
 .searchAssist-kore-chat-window .tile-description.defalut-show {
 height: 16px !important;
 }
@@ -14856,3 +14856,25 @@ margin-bottom: 15px !important;
     margin-right: 8px;
     line-height: 16px;
 }
+.text-truncate-overflow {
+    --lh: 1rem;
+   --max-lines: 2;
+   position: relative;
+   max-height: calc(var(--lh) * var(--max-lines));
+   overflow: hidden;
+   padding-right: 3px;
+ }
+ .text-truncate-overflow::before {
+   position: absolute;
+   content: "...";
+   bottom: 0;
+   right: 0;
+ }
+ .text-truncate-overflow::after {
+   content: "";
+   position: absolute;
+   right: 0;
+   width: 1rem;
+   height: 1rem;
+   background: white;
+ }
