--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.html
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.html
@@ -14,7 +14,7 @@
       <div class="col-6 p-0 right-sec d-flex align-items-center justify-content-end">
        
         <div class="kr-sg-input-search m-0"  [ngClass]="{'d-none': !showSearch}" style="float: left">                               
-          <input type="text" maxlength="60" placeholder="Search" id="inputSearch" class="input-search"  [ngClass]="{'pl-33':!searchFields,'pl-2':searchFields}" autocomplete="off" [(ngModel)]="searchFields"  maxlength="50" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+          <input type="text" maxlength="60" placeholder="Search" id="inputSearch" class="input-search"  [ngClass]="{'pl-33':!searchFields,'pl-2':searchFields}" autocomplete="off" [(ngModel)]="searchFields"  maxlength="50" (keyup)="getExperiments(searchFields,'search')" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
           (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
       <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchFields">
       <img class="close-icon" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchFields}"  (mouseover)="activeClose=true" (mouseout)="activeClose=false" (click)="focusoutSearch()"  placement="top-center" container='body' ngbTooltip="Cancel" tooltipClass="ngb_tooltip_custom_class sampleJson">
@@ -36,7 +36,7 @@
             {{"experiments.variants"| translate}}</div>
           <!-- <div class="col-2 h-title">Winner</div> -->
           
-          <div class="col-2 d-flex align-items-center h-title" (click)="sortBy('state')">
+          <div class="col-2 d-flex align-items-center h-title" (click)="sortByApi('state')">
             <span class="d-flex align-items-center flex-column mr-1">
               <img [ngClass]="getSortIconVisibility('state', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
               <img [ngClass]="getSortIconVisibility('state', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
@@ -52,7 +52,7 @@
                     <img class="custom-dropdown-toggle-icon" src="assets/icons/Vector.svg">
                 </button>
                 <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
-                  <li *ngFor="let status of dynamicStatus" (click)="selectedTab(status);statusFilter.close()"><span
+                  <li *ngFor="let status of dynamicStatus" (click)="filterTable(status,'status');statusFilter.close()"><span
                       class="list-name">{{status|titlecase}}</span><img [ngClass]="{'hide': status !== setTab}" src="assets/icons/check-blue.svg"></li>
                 </ul>
               </div>
