--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -35,7 +35,9 @@
         </ng-container>
       </div>
     </perfect-scrollbar>  
+    
   </ng-container>
+ 
   <!-- <div class="empty-case-showing-cotent" *ngIf="!(resources && resources.length) && !loadingContent">
     <div class="crawlContent row m-0 mb-4">
       <div class="col-12 main-title label_text">Add Content</div>
@@ -72,7 +74,7 @@
         <div>
           <div class="kr-sg-input-search m-0"  [ngClass]="{'d-none': !showSearch}">
             <input type="text" maxlength="60" placeholder="Search" class="input-search" name='searchSources' placeholder="Search" [ngClass]="{'pl-2':searchSources}"
-              id="searchContentSources" [(ngModel)]="searchSources" 
+              id="searchContentSources" [(ngModel)]="searchSources" (keyup)="getSourceList(null,searchSources,'search')"
               autocomplete="off"  (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
               (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
               <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchSources">
@@ -104,7 +106,7 @@
       </div>
       <section class="table-content" *ngIf="currentView === 'list'">
         <header class="table-header">
-          <div class="col_ col-2 d-flex align-items-center" (click)="sortBy('name')">
+          <div class="col_ col-2 d-flex align-items-center" (click)="sortByApi('name')">
             <!-- <img src="assets/icons/caretDown.svg"
               [ngClass]="{'assending': (selectedSort==='name') && isAsc,'decending':(selectedSort==='name') && !isAsc}"
               class="ml-1 sortImg"> -->
@@ -114,7 +116,7 @@
               </span>
               {{"contentSource.source_title_caps" | translate}}
           </div>
-          <div class="col_ col-2 d-flex align-items-center pr-0" (click)="sortBy('type')"><span
+          <div class="col_ col-2 d-flex align-items-center pr-0" (click)="sortByApi('contentSource')"><span
               class="selected-length-doc-web d-none">({{filterSystem.typefilter}})</span>
               <span class="d-flex align-items-center flex-column mr-1">
                 <img [ngClass]="getSortIconVisibility('type', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
@@ -131,9 +133,9 @@
                   <img class="custom-dropdown-toggle-icon" src="assets/icons/Vector.svg">
                 </button>
                 <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
-                  <li (click)="sourceFilter.close();filterTable('all','extractionType')"><span class="list-name">All</span><img
+                  <li (click)="sourceFilter.close();filterTable('all','contentSource')"><span class="list-name">All</span><img
                       [ngClass]="{'hide': filterSystem.typefilter !== 'all'}" src="assets/icons/check-blue.svg"></li>
-                  <li *ngFor="let docType of docTypeArr" (click)="sourceFilter.close();filterTable(docType,'extractionType')">
+                  <li *ngFor="let docType of docTypeArr" (click)="sourceFilter.close();filterTable(docType,'contentSource')">
                     <span
                       class="list-name">{{docType == 'web' ? 'Web' :(docType == 'file'? 'File': '')}}</span><img
                       [ngClass]="{'hide': filterSystem.typefilter !== docType}" src="assets/icons/check-blue.svg"></li>
@@ -142,7 +144,7 @@
             </div>
           </div>
           <!-- <div class="col" (click)="sortBy('collection')">Collection <img src="assets/icons/caretDown.svg" class="ml-1"></div> -->
-          <div class="col_ col-3 d-flex align-items-center" (click)="sortBy('recentStatus')"><span
+          <div class="col_ col-3 d-flex align-items-center" (click)="sortByApi('recentStatus')"><span
               class="selected-length-doc-web hide">({{this.filterSystem.statusFilter}})</span>
               <span class="d-flex align-items-center flex-column mr-1">
                 <img [ngClass]="getSortIconVisibility('recentStatus', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
@@ -177,20 +179,20 @@
               </div>
             </div>
           </div>
-          <div class="col_ col-2 d-flex align-items-center" (click)="sortBy('numPages')">
+          <div class="col_ col-2 d-flex align-items-center" (click)="sortByApi('numOfDocs')">
             <span class="d-flex align-items-center flex-column mr-1">
-              <img [ngClass]="getSortIconVisibility('numPages', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
-              <img [ngClass]="getSortIconVisibility('numPages', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
+              <img [ngClass]="getSortIconVisibility('numOfDocs', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
+              <img [ngClass]="getSortIconVisibility('numOfDocs', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
             </span>
                 {{"contentSource.no_of_docs_caps" | translate}}
           </div>
-          <div class="col_ col-2 d-flex align-items-center" (click)="sortBy('createdOn')">
+          <div class="col_ col-2 d-flex align-items-center" (click)="sortByApi('triggeredBy')">
             <!-- <img src="assets/icons/caretDown.svg"
               [ngClass]="{'assending': (selectedSort==='createdOn') && isAsc,'decending':((selectedSort==='createdOn') && !isAsc)}"
               class="ml-1 sortImg"> -->            
               <span class="d-flex align-items-center flex-column mr-1">
-                <img [ngClass]="getSortIconVisibility('recentStatus', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
-                <img [ngClass]="getSortIconVisibility('recentStatus', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
+                <img [ngClass]="getSortIconVisibility('triggeredBy', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
+                <img [ngClass]="getSortIconVisibility('triggeredBy', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
               </span>
               {{"contentSource.triggered_by_caps" | translate}}
           </div>
@@ -241,9 +243,11 @@
               </div>
             </div>
           </ng-container>
+          <div style="margin-right: 10px;"> <app-record-pagination *ngIf="totalRecord && totalRecord > 3" [totalRecord]='totalRecord' [limitpage]='3' (pageChanged)="paginateContent($event)"></app-record-pagination></div>
           <div class="empty">{{"contentSource.no_results_found" | translate}}</div>
         </perfect-scrollbar>
       </section>
+      
       <ng-container *ngIf="currentView === 'grid'">
         <perfect-scrollbar class="table-scroll-perfect list">
           <!-- <div class="list-view-data">
@@ -333,9 +337,11 @@
           </div>
 <!-- New Design -->
         </perfect-scrollbar>
+       
       </ng-container>
     </div>
   </div>
+ 
 </div>
 
 <kr-modal modalType="center" modalClass="sliderComponent modal_popups_" #statusModalPop id="sourceSlider">
@@ -869,7 +875,12 @@
           <div class="accordion-content-info text-left" *ngIf="page && (sourceStatus == 'success' || (sourceStatus == 'running' && totalRecord != 0))">
             <div class="header-sec row m-0">
               <div class="col-8 label_text m-0 p-0">Pages</div>
-              <div class="col-3 label_text m-0">Last Updated <img src="assets/icons/caretDown.svg" class="ml-1"></div>
+              <span class="d-flex align-items-center flex-column mr-1">
+                <img [ngClass]="getSortIconVisibility('lastUpdated', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
+                <img [ngClass]="getSortIconVisibility('lastUpdated', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
+              </span>
+              <!-- <img src="assets/icons/caretDown.svg" class="ml-1"> -->
+              <div class="col-3 label_text m-0">Last Updated </div>
             </div>
             <div id="accordion" class="accordion-section">
               <perfect-scrollbar [disabled]="workflowService.disablePerfectScroll" class="scroll-table" #perfectScroll
@@ -936,7 +947,7 @@
                   </div> -->
               <!-- <app-pagination  [totalRecord]='totalRecord' [limitpage]='limitpage' [recordEnd]="recordEnd"
                 [allInOne]='false' (pageChanged)="paginate($event)"></app-pagination> -->
-                <app-record-pagination *ngIf = "totalRecord >  10" [totalRecord]='totalRecord' [limitpage]='limitpage' (pageChanged)="paginate($event)"></app-record-pagination>
+                <app-record-pagination *ngIf = "totalRecord >  2" [totalRecord]='totalRecord' [limitpage]='limitpage' (pageChanged)="paginate($event)"></app-record-pagination>
               <!-- <div class="paginations-custon">
                 <div class="previous pre-arrow dis-arow"
                   (click)="onClickArrow(recordStr-limitpage,recordEnd-limitpage,2,1000)"> </div>
